[project]
name = "business_plan"
version = "0.1.0"
description = "business_plan using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
business_plan = "business_plan.main:run"
run_crew = "business_plan.main:run"
train = "business_plan.main:train"
replay = "business_plan.main:replay"
test = "business_plan.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
